--- a/ui/index.html
+++ b/ui/index.html
@@ -1,10 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>地下室水浸检测</title>
+    <title>水浸报警监测</title>
   </head>
   <body>
     <div id="root"></div>
